Fix clipping on footer big screen

--- a/src/app/components/footer/footer.scss
+++ b/src/app/components/footer/footer.scss
@@ -45,6 +45,7 @@
     // background-size: 100% 100%;
     filter: drop-shadow(0px 0px 20px #ffd07252);
     position: relative;
+
     @include mq(620) {
       display: flex;
       flex-direction: column;
@@ -64,6 +65,10 @@
     @include mq(1024) {
       width: 100%;
       padding-left: 10%;
+    }
+
+    @include mq(2200, min) {
+      width: 30%;
     }
     .ftbgr {
       // display: none;
@@ -85,6 +90,15 @@
       }
       @include mq(660) {
         right: -40%;
+      }
+      @include mq(2200, min) {
+        right: -1%;
+        scale: 1.3 1;
+        transform: skewX(-15deg);
+        transform-origin: right;
+      }
+      @include mq(3800, min) {
+        scale: 1.5 1;
       }
     }
     .a {
